# fast-api-prisma

./: .env  README.md  docker-compose.yml  logging.yaml  pyproject.toml  server.py
app/: main.py
app/routes/: articles.py
docker/: .gitignore
docker/mysql/docker-entrypoint-initdb.d/: init.sql
docker/python/: Dockerfile
prisma/: schema.prisma
prisma/migrations/20221102173240_init/: migration.sql
